fixed mobile overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@
   padding: 10px; /* Safari */
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background: #fff;
   color: #131313;
